# kr-elections-mcp

./: .editorconfig  .env.example  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  README.md  README_kr.md  SECURITY.md  pyproject.toml  requirements.txt  server.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py  cache.py  campaign_booklet_corpus.py  coerce.py  config.py  diagnostics.py  errors.py  krpoltext_api.py  krpoltext_matching.py  models.py  nec_api.py  normalize.py  redact.py  resources.py  results_api.py  secret_store.py  tool_handlers.py
docs/: api-access.md  api-access_kr.md  architecture.md  architecture_kr.md  data-sources.md  data-sources_kr.md  examples.md  examples_kr.md  github-release-draft.md  github-release-draft_kr.md  krpoltext-matching.md  krpoltext-matching_kr.md  release-checklist.md  release-checklist_kr.md  repository-metadata.md  repository-metadata_kr.md  security.md  security_kr.md  source-status.md  source-status_kr.md  tool-matrix.md  tool-matrix_kr.md
tests/: live_tool_check.py  test_cache.py  test_campaign_booklet_sources.py  test_config.py  test_diagnostics.py  test_krpoltext_api.py  test_krpoltext_manifest_fallback.py  test_krpoltext_matching.py  test_krpoltext_meta.py  test_krpoltext_retry.py  test_nec_api.py  test_normalize.py  test_packet.py  test_pagination_and_turnout.py  test_redact.py  test_resources.py  test_results_api.py  test_server.py  test_tool_registration.py
